--- a/template/youth/1.html
+++ b/template/youth/1.html
@@ -12,24 +12,33 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
+    <div id="cover" class="cover">
+        <div class="clock">
+            <div class="hour animated"></div>
+            <div class="minute animated"></div>
+        </div>
+        <div class="bg-txt"></div>
+        <div class="hand animated fadeOut duration-f5"></div>
+    </div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-1">
                 <div class="img-wrap">
-                    <!-- <div class="animated block youth-zoom-in duration-2"> -->
+                    <div class="animated youth-zoom-in duration-2">
                         <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/1/img.png)">
                         </div>
-                    <!-- </div> -->
+                    </div>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-2"></div>
-                    <div class="clock-item clock-3 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-3 animated infinite clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-4"></div>
                 </div>
-                <div class="se animated block duration-1"></div>
+                <div class="se animated duration-1"></div>
                 <div class="content-txt">
-                    <span class="animated block duration-2 delay-2 fadeIn">我放下钢笔</span>
-                    <span class="animated block duration-2 delay-3 fadeIn">轻轻的合上我的日记</span>
+                    <span class="animated duration-2 delay-2 fadeIn">我放下钢笔</span>
+                    <span class="animated duration-2 delay-3 fadeIn">轻轻的合上我的日记</span>
                 </div>
             </div>
         </div>
