--- a/template/youth/2.html
+++ b/template/youth/2.html
@@ -12,21 +12,22 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
+
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-2">
-                <div class="se animated block duration-1"></div>
-                <div class="img-wrap animated block duration-2">
+            <div class="swiper-slide swiper-2 horizontal">
+                <div class="se animated duration-1"></div>
+                <div class="img-wrap animated duration-2">
                     <div class="img-c" style="background-image: url(../../imgs/youth/1/img.png)">
                     </div>
                 </div>
                 <div class="content-txt">
-                    <span class="animated block duration-2 delay-2 fadeIn">纯真是即使不小心相互伤害</span>
-                    <span class="animated block duration-2 delay-3 fadeIn">还能不计前嫌的牵手</span>
+                    <span class="animated duration-2 delay-2 fadeIn">纯真是即使不小心相互伤害</span>
+                    <span class="animated duration-2 delay-3 fadeIn">还能不计前嫌的牵手</span>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-x duration-12 delay-2"></div>
-                    <div class="clock-item clock-2 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-x duration-12 delay-2"></div>
+                    <div class="clock-item clock-2 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-3"></div>
                 </div>
             </div>
