--- a/template/youth/4.html
+++ b/template/youth/4.html
@@ -14,18 +14,23 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-4">
-                <div class="se animated block duration-1"></div>
+            <div class="swiper-slide swiper-4 horizontal">
+                <div class="se animated duration-1"></div>
                 <div class="img-wrap">
-                    <div class="img-c animated block duration-2" style="background-image: url(../../imgs/youth/4/img.png)">
+                    <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/4/img.png)">
                     </div>
                 </div>
                 <div class="content-txt">
-                	<p class="fadeIn animated block duration-1 delay-2"><span>故事的结尾誓言都沦为叹息</span></p>
-                    <p class="fadeIn animated block duration-1 delay-2d5">我愿意默默祝福就好</p>
+                	<p class="fadeIn animated duration-1 delay-2"><span>故事的结尾誓言都沦为叹息</span></p>
+                    <p class="fadeIn animated duration-1 delay-2d5">我愿意默默祝福就好</p>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-x duration-12 delay-3"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-x duration-12 delay-3"></div>
+                    <div class="clock-item clock-2"></div>
+                    <div class="clock-item clock-3"></div>
+                    <div class="clock-item clock-4"></div>
+                </div>
+                <div class="clock-wrap2">
                     <div class="clock-item clock-2"></div>
                     <div class="clock-item clock-3"></div>
                     <div class="clock-item clock-4"></div>
