--- a/template/youth/6.html
+++ b/template/youth/6.html
@@ -14,20 +14,20 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-6">
-                <div class="se animated block duration-1"></div>
+            <div class="swiper-slide swiper-6 horizontal">
+                <div class="se animated duration-1"></div>
                 <div class="img-wrap">
-                    <div class="img-c animated block duration-2" style="background-image: url(../../imgs/youth/6/img.png)">
+                    <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/6/img.png)">
                     </div>
                 </div>
                 <div class="content-txt">
-                	<p class="fadeIn animated block duration-1 delay-2">和寂寞对话</p>
-                    <p class="fadeIn animated block duration-1 delay-2d5">只是不相信你已离开</p>
+                	<p class="fadeIn animated duration-1 delay-2">和寂寞对话</p>
+                    <p class="fadeIn animated duration-1 delay-2d5">只是不相信你已离开</p>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-2"></div>
-                    <div class="clock-item clock-3 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-3 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-4"></div>
                 </div>
             </div>
