--- a/src/youth/2.less
+++ b/src/youth/2.less
@@ -97,6 +97,57 @@
 
 }
 
+.swiper-2.horizontal{
+	.img-wrap{
+		.transform(none);
+		top: 404px;
+		width: 100%;
+		height: 520px;
+		.ani-name(imgAni2-h);
+	}
+	.img-c{
+		.transform(none);
+	}
+
+	.content-txt{
+		.transform(none);
+		left: 43px;
+		top: 291px;
+		text-align: left;
+		line-height: 1.5;
+
+		>span{
+			display: block;
+			float: none;
+			width: auto;
+		}
+	}
+
+	.se{
+		left: 0;
+		top: 0;
+		.transform(rotateY(180deg));
+		.ani-name(se2-h);
+	}
+
+	.clock-wrap{
+		position: static;
+	}
+
+	.clock-1{
+		top: 98px;
+		left: 409px;
+	}
+	.clock-2{
+		top: 16px;
+		left: 497px;
+	}
+	.clock-3{
+		top: 210px;
+		left: 546px;
+	}
+}
+
 @-webkit-keyframes imgAni2{
 	0%{
 		.transform(rotate(15deg) translateX(-550px) translateY(-18px));
@@ -108,9 +159,29 @@
 	}
 }
 
+@-webkit-keyframes imgAni2-h{
+	0%{
+		.transform(translateX(-550px));
+		opacity: .7;
+	}
+	100%{
+		
+		// .transform(rotate(15deg) translateX(-40px) translateY(-18px));
+	}
+}
+
 @-webkit-keyframes se2{
 	0%{
 		.transform(translateX(550px));
+		opacity: .7;
+	}
+	100%{
+	}
+}
+
+@-webkit-keyframes se2-h{
+	0%{
+		.transform(translateX(-550px) rotateY(180deg));
 		opacity: .7;
 	}
 	100%{
