--- a/src/youth/4.less
+++ b/src/youth/4.less
@@ -60,6 +60,10 @@
 		  height: 340px;		  
 	}
 
+	.clock-wrap2{
+		display: none;
+	}
+
 	.clock-item{
 		.bg-contain();
 		position: absolute;
@@ -110,6 +114,54 @@
 		.ani-name(se4);
 	}
 
+}
+
+.swiper-4.horizontal{
+	.img-wrap{
+		.transform(none);
+		width: 100%;
+		height: 520px;
+		top: 335px;
+		left: 0;
+	}
+	.img-c{
+		.transform(none);
+	}
+	.content-txt{
+		.transform(none);
+		text-align: right;
+		left: auto;
+		right: 45px;
+		top: 241px;
+		p{
+			text-align: right;
+		}
+	}
+	.se{
+		.bgImg('se-h.png', 4);
+		width: 529px;
+		height: 111px;
+		left: 0;
+		bottom: 0;
+	}
+	.clock-wrap2{
+		display: block;
+		.clock-2{
+			left: 571px;
+			top: auto;
+			bottom: 0;
+		}
+		.clock-3{
+			top: auto;
+			bottom: 0;
+			left: 515px;
+		}
+		.clock-4{
+			top: auto;
+			bottom: 105px;
+			left: 618px;
+		}
+	}
 }
 
 @-webkit-keyframes txtAni4{
