--- a/src/youth/5.less
+++ b/src/youth/5.less
@@ -106,6 +106,55 @@
 
 }
 
+.swiper-5.horizontal{
+	.img-wrap{
+		.transform(none);
+		width: 100%;
+		height: 520px;
+		top: 127px;
+		left: 0;
+	}
+	.img-c{
+		.transform(none);
+	}
+	.content-txt{
+		top: 685px;
+		left: 35px;
+		text-align: left;
+	}
+	.se{
+		top: auto;
+		bottom: 0;
+		left: 0;
+		.bgImg('se-h.png', 5);
+		width: 507px;
+		height: 141px;
+	}
+	.clock-wrap{
+		position: static;
+	}
+	.clock-1{
+		left: 507px;
+		top: auto;
+		bottom: -65px;
+	}
+	.clock-2{
+		left: 485px;
+		top: auto;
+		bottom: 200px;
+	}
+	.clock-3{
+		left: 598px;
+		top: auto;
+		bottom: 190px;
+	}
+	.clock-4{
+		left: 563px;
+		top: auto;
+		bottom: 162px;
+	}
+}
+
 @-webkit-keyframes imgAni5{
 	0%{
 		.transform(scale(1.5));
