--- a/src/youth/6.less
+++ b/src/youth/6.less
@@ -106,6 +106,52 @@
 
 }
 
+.swiper-6.horizontal {
+	.img-wrap{
+		.transform(none);
+		width: 100%;
+		height: 520px;
+		top: 425px;
+		left: 0;
+	}
+	.img-c{
+		.transform(none);
+	}
+	.content-txt{
+		top: 242px;
+		right: 35px;
+		text-align: right;
+	}
+	.se{
+		.bgImg('se-h.png', 6);
+		width: 399px;
+		height: 111px;
+		top: 0;
+		left: auto;
+		right: 0;
+		.ani-name(se6-h);
+	}
+	.clock-wrap{
+		position: static;
+	}
+	.clock-1{
+		top: -80px;
+  		left: -32px;
+	}
+	.clock-2{
+		top: 37px;
+  		left: 190px;
+	}
+	.clock-3{
+		top: 132px;
+  		left: -57px;
+	}
+	.clock-4{
+		top: 192px;
+  		left: 48px;
+	}
+}
+
 @-webkit-keyframes imgAni6{
 	0%{
 		.transform(translateX(80px) scale(.7));
@@ -119,6 +165,15 @@
 @-webkit-keyframes se6{
 	0%{
 		.transform(translateX(-300px) translateY(-200px));
+		opacity: 0;
+	}
+	100%{
+	}
+}
+
+@-webkit-keyframes se6-h{
+	0%{
+		.transform(translateX(300px) translateY(-200px));
 		opacity: 0;
 	}
 	100%{
