--- a/template/youth/3.html
+++ b/template/youth/3.html
@@ -14,18 +14,23 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-3">
-                <div class="se animated block duration-2"></div>
+            <div class="swiper-slide swiper-3 horizontal">
+                <div class="se animated fadeIn duration-2"></div>
                 <div class="img-wrap">
-                    <div class="img-c animated block duration-2" style="background-image: url(../../imgs/youth/3/img.png)">
+                    <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/3/img.png)">
                     </div>
                 </div>
-                <div class="content-txt animated block duration-1 delay-2">
+                <div class="content-txt animated duration-1 delay-2">
                     <p>我们在成长中懂得不能妄求</p>
                     <p>却总是难以释怀</p>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-x duration-12 delay-3"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-x duration-12 delay-3"></div>
+                    <div class="clock-item clock-2"></div>
+                    <div class="clock-item clock-3"></div>
+                    <div class="clock-item clock-4"></div>
+                </div>
+                <div class="clock-wrap2">
                     <div class="clock-item clock-2"></div>
                     <div class="clock-item clock-3"></div>
                     <div class="clock-item clock-4"></div>
