--- a/template/youth/5.html
+++ b/template/youth/5.html
@@ -14,7 +14,7 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-5">
+            <div class="swiper-slide swiper-5 horizontal">
                 <div class="se animated block duration-1"></div>
                 <div class="img-wrap">
                     <div class="img-c animated block duration-2" style="background-image: url(../../imgs/youth/5/img.png)">
