--- a/template/youth/index2.html
+++ b/template/youth/index2.html
@@ -30,15 +30,15 @@
                     </div>
                 </div>
                 <div class="clock-wrap">
-                    <div class="clock-item clock-1 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-1 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-2"></div>
-                    <div class="clock-item clock-3 animated infinite block clock-ani-y duration-12 delay-2"></div>
+                    <div class="clock-item clock-3 animated infinite clock-ani-y duration-12 delay-2"></div>
                     <div class="clock-item clock-4"></div>
                 </div>
-                <div class="se animated block duration-1"></div>
+                <div class="se animated duration-1"></div>
                 <div class="content-txt">
-                    <span class="animated block duration-2 delay-2 fadeIn">我放下钢笔</span>
-                    <span class="animated block duration-2 delay-3 fadeIn">轻轻的合上我的日记</span>
+                    <span class="animated duration-2 delay-2 fadeIn">我放下钢笔</span>
+                    <span class="animated duration-2 delay-3 fadeIn">轻轻的合上我的日记</span>
                 </div>
             </div>
             <div class="swiper-slide swiper-2 horizontal">
