--- a/src/youth/1.less
+++ b/src/youth/1.less
@@ -125,7 +125,7 @@
 		text-align: left;
 		line-height: 1.5;
 
-		>span{
+		>span.block{
 			display: block;
 			width: auto;
 			float: none;
@@ -157,6 +157,11 @@
 		right: 576px;
 	}
 
+	.se{
+		width: 527px;
+		height: 146px;
+		.bgImg('se-h.png', 1);
+	}
 }
 
 @-webkit-keyframes se{
