--- a/src/youth/4.less
+++ b/src/youth/4.less
@@ -7,17 +7,17 @@
 .swiper-4{
 
 	.content-txt{
-		text-align: left;
+		text-align: right;
 		line-height: 1.5;
 		position: absolute;
-		bottom: 812px;
-  		left: 50px;
-		.transform(rotate(-9deg));
+		bottom: 805px;
+  		left: 40px;
+		.transform(rotate(-11deg));
 		z-index: 199;
 		// .ani-name(txtAni3);
 
 		p{
-			text-align: center;
+			// text-align: center;
 			span{
 				display: inline-block;
 			}
