--- a/src/youth/style.less
+++ b/src/youth/style.less
@@ -2,6 +2,7 @@
 @import '../../common/func.less';
 @import '../../common/ani.less';
 @import '../../common/common.less';
+@import '../../common/shower.less';
 
 @import '0.less';
 @import '1.less';
