--- a/template/youth/3.html
+++ b/template/youth/3.html
@@ -14,7 +14,7 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-3 horizontal">
+            <div class="swiper-slide swiper-3">
                 <div class="se animated fadeIn duration-2"></div>
                 <div class="img-wrap">
                     <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/3/img.png)">
