--- a/src/youth/3.less
+++ b/src/youth/3.less
@@ -10,25 +10,24 @@
 		text-align: right;
 		line-height: 1.5;
 		position: absolute;
-		top: 710px;
+		top: 773px;
   		right: 50px;
-		.transform(rotate(-9deg));
+		.transform(rotate(-12deg));
 		z-index: 199;
 		.ani-name(txtAni3);
 	}
 
 	.img-wrap{
-		width: 100%;
-		height: 690px;
+		width: 148%;
+		height: 794px;
 		position: absolute;
 		top: 52px;
 		left: 0;
 		.trans-origin(left center);
-		.transform( matrix3d(1.6,0,1.6, 0.0006,0.00,1,0.00,0,-0.71,0,0.71,0,0,0,0,1));
+		.transform(perspective(500px) rotateY(12deg) skewY(-2deg));
+		// .transform( matrix3d(1.6,0,1.6, 0.0006,0.00,1,0.00,0,-0.71,0,0.71,0,0,0,0,1));
 		overflow: hidden;
 		z-index: 200;
-
-		// .ani-name(imgAni);
 	}
 
 	.img-c{
@@ -160,11 +159,11 @@
 
 @-webkit-keyframes txtAni3{
 	0%{
-		.transform(rotate(-9deg) translateY(-100px));
+		.transform(rotate(-12deg) translateY(-100px));
 		opacity: 0;
 	}
 	100%{
-		.transform(rotate(-9deg) translateY(0));
+		.transform(rotate(-12deg) translateY(0));
 		opacity: 1;
 	}
 }
