--- a/template/youth/4.html
+++ b/template/youth/4.html
@@ -14,7 +14,7 @@
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
 	 <div class="swiper-container">
         <div  id='main' class="swiper-wrapper">
-            <div class="swiper-slide swiper-4 horizontal">
+            <div class="swiper-slide swiper-4">
                 <div class="se animated duration-1"></div>
                 <div class="img-wrap">
                     <div class="img-c animated duration-2" style="background-image: url(../../imgs/youth/4/img.png)">
