--- a/src/youth/6.less
+++ b/src/youth/6.less
@@ -17,13 +17,13 @@
 	}
 
 	.img-wrap{
-		width: 100%;
+		width: 134%;
 		height: 834px;
 		position: absolute;
-		top: 18px;
-		left: 0;
-		.trans-origin(left center);
-		.transform(perspective(600px) rotatey(-16deg) scale(.8));
+		top: 0;
+		right: 0;
+		.trans-origin(right center);
+		.transform(perspective(1000px) rotatey(-17deg));
 		overflow: hidden;
 		z-index: 501;
 
