--- a/template/tuya/6.html
+++ b/template/tuya/6.html
@@ -39,8 +39,10 @@
                     <div class="img-2" style="background-image: url(../../imgs/tuya/photo/8-2.png);"></div>
                     <div class="img-3" style="background-image: url(../../imgs/tuya/photo/1.png);"></div>
                 </div>
-                <div class="sheep"></div>
-                <div class="gl"></div>
+                <div class="sheep-wrap">
+                    <div class="sheep"></div>
+                    <div class="gl"></div>
+                </div>
             </div>
         </div>
     </div>
