--- a/common/ani.less
+++ b/common/ani.less
@@ -162,6 +162,10 @@
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
 }
+.ani-fill-both(){
+    -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
 
 .animated.flyInLeft{
 	.ani-name(flyInLeft);
