--- a/template/tuya/index.html
+++ b/template/tuya/index.html
@@ -32,6 +32,6 @@
 
 <script src="../../lib/zepto/zepto.min.js"></script>
 <script src="../../lib/swiper/js/swiper.js"></script>
-<script src="../../src/youth/index.js"></script>
+<script src="../../src/tuya/index.js"></script>
 </body>
 </html>
