--- a/template/tuya/1.html
+++ b/template/tuya/1.html
@@ -12,7 +12,7 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
-    <div class="swiper-container">
+    <div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-1">
                 <div class="img-wrap animated duration-2 delay-1">
@@ -25,7 +25,14 @@
                 </div>
                 <div class="tuzi animated duration-1"></div>
                 <div class="say animated duration-1 delay-f5"><div class="piu"></div></div>
-
+                <div class="bubbles">
+                    <div class="bb-1 animated delay-2 duration-4"></div>
+                    <div class="bb-2 animated delay-2 duration-4"></div>
+                    <div class="bb-3 animated delay-2 duration-4"></div>
+                    <div class="bb-4 animated delay-2 duration-4"></div>
+                    <div class="bb-5 animated delay-2 duration-4"></div>
+                    <div class="bb-6 animated delay-2 duration-4"></div>
+                </div>
             </div>
         </div>
     </div>
