--- a/src/tuya/6.less
+++ b/src/tuya/6.less
@@ -4,6 +4,30 @@
 @import '../../common/common.less';
 @import 'c.less';
 
+.swiper-container-2-wrap{
+	background-color: #fff;
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
+	position: absolute;
+	left: 52px;
+	top: 197px;
+	z-index: 501;
+	width: 472px;
+	height: 743px;
+	padding: 23px 36px 24px 38px;
+	visibility: hidden;
+}
+
+.swiper-container-2{
+	// visibility: visible;
+	position: relative;
+
+	.swiper-slide{
+		background-color: #fff;
+		.bg-cover();
+	}
+}
+
 .swiper-6{
 
 	.title{
@@ -181,9 +205,9 @@
 	.sheep-wrap{
 		display: none;
 		position: absolute;
-		left: 0;
-		bottom: 0;
-		width: 100%;
+		left: 88px;
+		bottom: 51px;
+		width: 465px;
 	}
 	.sheep{
 		.bg-contain();
@@ -238,6 +262,25 @@
 	}
 }
 
+.swiper-6.state-view{
+	.img-wrap{
+		.ani-name(imgWrapHidden);
+		.ani-delay(0s);
+	}
+	.swiper-container-2-wrap{
+		visibility: visible;
+		.ani-name(swiper2Show);
+		.ani-duration(1s);
+		.ani-fill-both();
+	}
+	.swiper-container-2{
+		visibility: visible;
+	}
+	.sheep-wrap{
+		display: none;
+	}
+}
+
 @-webkit-keyframes t-down{
 	0%{
 		.transform(translateX(-500px));
@@ -284,6 +327,20 @@
 	}
 }
 @-webkit-keyframes imgWrap{
+	0%{
+		.transform(scale(0));
+	}
+	100%{
+	}
+}
+@-webkit-keyframes imgWrapHidden{
+	0%{
+	}
+	100%{
+		.transform(scale(0));
+	}
+}
+@-webkit-keyframes swiper2Show{
 	0%{
 		.transform(scale(0));
 	}
