--- a/template/tuya/2.html
+++ b/template/tuya/2.html
@@ -12,7 +12,7 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
-    <div class="swiper-container">
+    <div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-2">
                 <div class="img-wrap animated duration-1">
