--- a/template/tuya/6.html
+++ b/template/tuya/6.html
@@ -12,7 +12,7 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
-    <div class="swiper-container">
+    <div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-6">
                 <div class="title">
@@ -42,6 +42,15 @@
                 <div class="sheep-wrap">
                     <div class="sheep"></div>
                     <div class="gl"></div>
+                </div>
+                <div class="swiper-container-2-wrap">
+                    <div class="swiper-container swiper-container-2">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/8.png);"></div>
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/8-2.png);"></div>
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/1.png);"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
