--- a/template/tuya/index.html
+++ b/template/tuya/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, user-scalable=0"  />
+	<meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=0"  />
 	<title>涂鸦</title>
     <link rel="stylesheet" type="text/css" href="../../lib/animate/animate.css">
 	<link rel="stylesheet" type="text/css" href="../../lib/swiper/css/swiper.min.css">
@@ -12,19 +12,119 @@
 
 <div class="wrap">
 	<div id="loading" class="loading animated infinite block rotate-x duration-2"></div>
-	<div class="swiper-container">
+	<div id="swiper-container" class="swiper-container">
         <div  id='main' class="swiper-wrapper">
             <div class="swiper-slide swiper-1">
+                <div class="img-wrap animated duration-2 delay-1">
+                    <div class="img-c" style="background-image:url(../../imgs/tuya/photo/1.png);"></div>
+                </div>
+                <div class="content-txt">
+                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                </div>
+                <div class="tuzi animated duration-1"></div>
+                <div class="say animated duration-1 delay-f5"><div class="piu"></div></div>
+                <div class="bubbles">
+                    <div class="bb-1 animated delay-2 duration-4"></div>
+                    <div class="bb-2 animated delay-2 duration-4"></div>
+                    <div class="bb-3 animated delay-2 duration-4"></div>
+                    <div class="bb-4 animated delay-2 duration-4"></div>
+                    <div class="bb-5 animated delay-2 duration-4"></div>
+                    <div class="bb-6 animated delay-2 duration-4"></div>
+                </div>
             </div>
             <div class="swiper-slide swiper-2">
+                <div class="img-wrap animated duration-1">
+                    <div class="img-c" style="background-image:url(../../imgs/tuya/photo/2.png);"></div>
+                </div>
+                <div class="content-txt">
+                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                </div>
+                <div class="dog animated duration-f5"></div>
+
             </div>
             <div class="swiper-slide swiper-3">
+                <div class="img-wrap animated duration-1">
+                    <div class="img-c" style="background-image:url(../../imgs/tuya/photo/3.png);"></div>
+                </div>
+                <div class="content-txt">
+                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                </div>
+                <div class="dog animated duration-1"></div>
+                <div class="say animated duration-1 delay-1"><div class="ka"></div></div>
+
             </div>
             <div class="swiper-slide swiper-4">
+                <div class="img-wrap animated duration-2">
+                    <div class="img-c" style="background-image:url(../../imgs/tuya/photo/4.png);"></div>
+                </div>
+                <div class="content-txt">
+                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                </div>
+                <div class="dog animated duration-1"></div>
+                <div class="light-wrap animated duration-2 infinite delay-2">
+                    <div class="lights"><i></i><i></i><i></i><i></i><i></i></div>
+                </div>
             </div>
             <div class="swiper-slide swiper-5">
+                <div class="img-wrap animated duration-2">
+                    <div class="img-c" style="background-image:url(../../imgs/tuya/photo/5.png);"></div>
+                </div>
+                <div class="content-txt">
+                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                </div>
+                <div class="dog animated duration-1"></div>
+                <div class="say-c animated duration-1">
+                    <div class="say animated duration-1 infinite delay-1"><div class="ha"></div></div>
+                </div>
             </div>
             <div class="swiper-slide swiper-6">
+                <div class="title">
+                    <div class="t-up animated duration-1 delay-2"></div>
+                    <div class="t-middle animated duration-1 delay-1"></div>
+                    <div class="t-down animated duration-1"></div>
+                    <div class="t-color-wrap animated duration-1 delay-3">
+                        <div class="t-color animated duration-1"></div>
+                    </div>
+                    <div class="bubbles animated fadeIn delay-3">
+                        <div class="b-1"></div>
+                        <div class="b-2"></div>
+                        <div class="b-3"></div>
+                        <div class="b-4"></div>
+                        <div class="b-5"></div>
+                        <div class="b-6"></div>
+                        <div class="b-7"></div>
+                    </div>
+                    <div class="t-by"></div>
+                    <div class="t-tip">手指擦擦，为图象涂上颜色</div>
+                </div>
+                <div class="img-wrap">
+                    <div class="img-1" style="background-image: url(../../imgs/tuya/photo/8.png);"></div>
+                    <div class="img-2" style="background-image: url(../../imgs/tuya/photo/8-2.png);"></div>
+                    <div class="img-3" style="background-image: url(../../imgs/tuya/photo/1.png);"></div>
+                </div>
+                <div class="sheep-wrap">
+                    <div class="sheep"></div>
+                    <div class="gl"></div>
+                </div>
+                <div class="swiper-container-2-wrap">
+                    <div class="swiper-container swiper-container-2">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/8.png);"></div>
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/8-2.png);"></div>
+                            <div class="swiper-slide" style="background-image: url(../../imgs/tuya/photo/1.png);"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
